Fix: alignment

--- a/src/components/Experties/Experties.module.scss
+++ b/src/components/Experties/Experties.module.scss
@@ -75,7 +75,7 @@
     width: 100%;
     gap: 1.5rem;
     justify-content: space-around;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
     > img {
       @media (max-width: $sm) {
         width: 100%;
